# DInlineHook

./: LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/dodola/profiler/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  hello.cpp  native-lib.cpp  test.s
app/src/main/java/dodola/profiler/: MainActivity.java  MyApplication.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/dodola/profiler/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
jniwrapper/: build.gradle
jniwrapper/src/androidTest/java/profiler/dodola/jniwrapper/: ExampleInstrumentedTest.java
jniwrapper/src/main/: AndroidManifest.xml
jniwrapper/src/main/java/profiler/dodola/jniwrapper/: JniWrapperGenerator.java  MainActivity.java  MainActivityFragment.java
jniwrapper/src/main/res/layout/: activity_main.xml  content_main.xml  fragment_main.xml
jniwrapper/src/main/res/menu/: menu_main.xml
jniwrapper/src/main/res/values/: strings.xml
jniwrapper/src/test/java/profiler/dodola/jniwrapper/: ExampleUnitTest.java
lib/: build.gradle
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: CMakeLists.txt  Ding.cpp  Ding.h
lib/src/main/cpp/epic/: epic.cpp  fake_dlfcn.cpp
lib/src/main/cpp/fb/: CMakeLists.txt  fbassert.cpp
lib/src/main/cpp/fb/include/fb/: Countable.h  RefPtr.h  StaticInitialized.h  ThreadLocal.h
lib/src/main/cpp/fb/include/fb/fbjni/: Hybrid.h  ReferenceAllocators-inl.h
lib/src/main/cpp/fb/include/jni/: Registration.h
lib/src/main/cpp/fb/jni/: Exceptions.cpp  LocalString.cpp
lib/src/main/cpp/iohook/: CMakeLists.txt  IOHooker.cpp  IOHooker.h
lib/src/main/cpp/jniwrapper/: CMakeLists.txt  context_wrapper.cpp  context_wrapper.h  dodo_wrapper.h  exception_wrapper.cpp  exception_wrapper.h  java_lang_wrapper.cpp  java_lang_wrapper.h
lib/src/main/cpp/libffi/: CMakeLists.txt  ffi_cxx.h
lib/src/main/cpp/perfd/: CMakeLists.txt
lib/src/main/cpp/perfd/cpu/: CMakeLists.txt
lib/src/main/cpp/utils/: CMakeLists.txt  activity_manager.cc  activity_manager.h  activity_manager_test.cc  background_queue.cc  background_queue.h  background_queue_test.cc  bash_command.cc  bash_command.h  circular_buffer.h  circular_buffer_test.cc  clock.cc  clock.h  clock.mac.cc  clock_test.cc  count_down_latch.h  count_down_latch_test.cc  current_process.cc  current_process.h  current_process.linux.cc  current_process.mac.cc  current_process_test.cc  device_info.cc  device_info.h  fake_clock.h  file_cache.cc  file_cache.h  file_cache_test.cc  file_reader.cc  file_reader.h  file_reader_test.cc  filesystem_notifier.cc  filesystem_notifier.h  filesystem_notifier.mac.cc  installer.cc  installer.h  log.android.cc  log.cc  log.h  package_manager.cc  (+23 more)
lib/src/main/cpp/utils/fs/: README.md  dir.cc  dir.h  disk_file_system.cc  disk_file_system.h  file.cc  file.h  file_system.cc  file_system.h  file_system_test.cc  memory_file_system.cc  memory_file_system.h  path.cc  path.h
lib/src/main/cpp/vixl/: CMakeLists.txt  code-buffer-vixl.cc
lib/src/main/java/com/taobao/android/dexposed/: DexposedBridge.java
lib/src/main/java/me/weishu/epic/art/method/: Offset.java
lib/src/main/java/profiler/dodola/lib/: ArtMethod.java  Helper.java  InnerHooker.java  Offset.java  Profiler.java  Runtime.java  Unsafe.java
